JWT 인증 - JWT 인증 필터 개발

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -13,3 +13,6 @@ spring:
     url: jdbc:postgresql://localhost:15432/prod-crash-db
     username: crash-master
     password: crash-postgres-password
+
+jwt:
+  secret-key: Y3Jhc2gtYmFzZS1lbmNvZGVyLXNlb2w=
