--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -8,11 +8,11 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
-      hibernate.hibernate.dialect: org.hibername.dialect.PostgreSQLDialect
+      hibernate.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
   datasource:
     url: jdbc:postgresql://localhost:15432/crash-db
     username: crash-master
     password: crash-postgres-password
 
 jwt:
-  secret-key: Y3Jhc2gtYmFzZS1lbmNvZGVyLXNlb2w=
+  secret-key: X2NyYXNoX3NlcnZpY2Vfc3VwZXJfc2VjcmV0X2tleV8=
